<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inventory"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_taken_items"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_taken_items" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>
</menu>